--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ googleGmsGoogleServices = "4.4.2"
 firebaseAuth = "23.0.0"
 ksp = "2.0.0-1.0.22"
 roomVersion = "2.6.1"
+jodaTime = "2.12.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,6 +34,7 @@ hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt"}
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomVersion" }
+joda-time = { group = "joda-time", name = "joda-time", version.ref = "jodaTime" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
